--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "express": "^4.17.1",
     "express-http-to-https": "^1.1.4",
     "express-static-gzip": "^1.1.3",
-    "gzipper": "^2.10.4"
+    "gzipper": "^2.10.4",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "3d-force-graph": "^1.62.1",
